# ws-ops

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ai-agents.md  configuration.md  setup.md
docs/sources/: email.md  gitlab.md  jira.md  telegram.md
prompts/: daily_brief.yaml  email_action.yaml  email_classify.yaml  github_summary.yaml  gitlab_summary.yaml  jira_summary.yaml  telegram_extract.yaml
src/: __init__.py  cli.py  config.py  db.py  digest.py  llm.py  notify.py  prompt_manager.py  registry.py
src/sources/: __init__.py  base.py  email.py  github.py  gitlab.py  jira.py  telegram.py
tests/: conftest.py  test_cli.py  test_llm.py  test_prompt_manager.py
tests/sources/: test_email.py  test_gitlab.py  test_telegram.py
