[project]
name = "ws-ops"
version = "0.1.0"
description = "Personal workstation automation — organizes inbox, digests dev feeds"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["cli", "automation", "email", "gitlab", "github", "telegram", "jira", "llm", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Communications :: Email",
]
dependencies = [
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "imapclient>=3.0",
    "python-gitlab>=4.0",
    "PyGitHub>=2.0",
    "telethon>=1.36",
    "python-telegram-bot>=21.0",
    "jira>=3.0",
    "openai>=1.0",
    "aiosqlite>=0.20",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "platformdirs>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/deniscuciuc/ws-ops"
Repository = "https://github.com/deniscuciuc/ws-ops"
Documentation = "https://github.com/deniscuciuc/ws-ops/blob/main/README.md"
Changelog = "https://github.com/deniscuciuc/ws-ops/blob/main/CHANGELOG.md"
Issues = "https://github.com/deniscuciuc/ws-ops/issues"

[project.scripts]
ws-ops = "src.cli:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
